# PlayFabCSdk

./: .gitignore  .gitmodules  CHANGELOG.md  Directory.Packages.props  LICENSE  NuGet.config  PlayFab.C.vs2022.sln  PlayFabGameSave.C.GDK.vs2022.sln  README.md  es-metadata.yml
.config/: tsaOptions.json
Samples/: .gitignore
Samples/PlayFabGameSaveSample-Windows/: README.md
Samples/PlayFabGameSaveSample-XboxConsole/: DeviceResources.cpp  DeviceResources.h  Main.cpp  MicrosoftGameConfig.mgc  PlayFabGameSaveSample-XboxConsole.cpp  PlayFabGameSaveSample-XboxConsole.h  PlayFabGameSaveSample-XboxConsole.sln  PlayFabGameSaveSample-XboxConsole.vcxproj  PlayFabGameSaveSample-XboxConsole.vcxproj.filters  Readme.md  pch.h
Source/PlayFabCore/: API-List.csv
Source/PlayFabServices/: API-List.csv
Test/: testTitleData.json
Test/PFGameSaveTestController/: ActionResultHandler.cs  ChaosModeScenarioParameters.cs  CommandProcessing.cs  ControllerRuntime.cs  ControllerTransport.cs  ExitCodes.cs  MainForm.cs  PFGameSaveTestController.csproj  PFGameSaveTestController.slnx  Program.cs  ScenarioManifestLoader.cs  ScenarioManifestService.cs  ScenarioRunner.cs  SnapshotComparer.cs  TestResultsWriter.cs  WebSocketServer.cs
Test/PFGameSaveTestDeviceWindows/: MicrosoftGameConfig.mgc  PFGameSaveTestDeviceWindows.vcxproj  PFGameSaveTestDeviceWindows.vcxproj.filters
Test/PlayFabCore.UnitTests/: PlayFabCore.UnitTests.vcxproj  PlayFabCore.UnitTests.vcxproj.filters
Test/PlayFabGameSaveGeneratedTests/: ConcurrencyTests.cpp  DataStructureTests.cpp  EdgeCaseTests.cpp  EndToEndWorkflowTests.cpp  ErrorHandlingTests.cpp  FileSystemTests.cpp  HttpClientTests.cpp  MemoryManagementTests.cpp  MockFrameworkTests.cpp  PerformanceTests.cpp  PlatformTests.cpp  PlayFabGameSaveGeneratedTests.vcxproj  PublicAPITests.cpp  SecurityTests.cpp  ServiceProviderTests.cpp  SyncManagerTests.cpp  TestSuiteValidation.cpp  UICallbackAPITests.cpp  UICallbackTests.cpp  XboxCertificationTests.cpp  main.cpp  packages.config  pch.h
Test/PlayFabGameSaveManualGDKTestApp/: Main.cpp  PlayFabGameSaveManualGDKTestApp.vcxproj  PlayFabGameSaveManualGDKTestApp.vcxproj.filters  Sample_GameSave.cpp  Sample_GameSave.h  Sample_GameSaveUI.cpp  Sample_GameSaveUI.h  Sample_SigninSteam.cpp  Sample_SigninSteam.h  Sample_SigninXbox.cpp  TestInline.cpp  TestInline.h  pch.h
Test/PlayFabGameSaveUnitTests/: FilePAL.h  FilePAL_Win32.cpp  HttpMock.cpp  HttpMock.h  MemoryManager.cpp  MemoryManager.h  PlayFabGameSaveUnitTests.vcxproj  PlayFabGameSaveUnitTests.vcxproj.filters  TestSuiteAPIs.cpp  TestSuiteFileSync.cpp  TestSuiteMisc.cpp  actions.cpp  actions.h  main.cpp  main.h  packages.config  pch.h
Test/PlayFabServices.GeneratedApiWrappers/: AccountManagementOperations.cpp  AccountManagementOperations.h  CatalogOperations.cpp  CatalogOperations.h  CharacterOperations.cpp  CharacterOperations.h  CloudScriptOperations.cpp  CloudScriptOperations.h  DataOperations.cpp  DataOperations.h  ExperimentationOperations.cpp  ExperimentationOperations.h  FriendsOperations.cpp  FriendsOperations.h  GetGeneratedApiWrappers.cmake  GroupsOperations.cpp  GroupsOperations.h  InventoryOperations.cpp  InventoryOperations.h  LeaderboardsOperations.cpp  LeaderboardsOperations.h  LocalizationOperations.cpp  LocalizationOperations.h  MultiplayerServerOperations.cpp  MultiplayerServerOperations.h  PlatformSpecificOperations.cpp  PlatformSpecificOperations.h  PlayFabServices.GeneratedApiWrappers.vcxitems  PlayFabServices.GeneratedApiWrappers.vcxitems.filters  PlayerDataManagementOperations.cpp  PlayerDataManagementOperations.h  ProfilesOperations.cpp  ProfilesOperations.h  PushNotificationsOperations.cpp  PushNotificationsOperations.h  SegmentsOperations.cpp  SegmentsOperations.h  StatisticsOperations.cpp  StatisticsOperations.h  TitleDataManagementOperations.cpp  (+1 more)
Test/PlayFabServices.GeneratedTests/: AccountManagementTests.cpp  AccountManagementTests.h  AccountManagementTestsImpl.stubs  CatalogTests.cpp  CatalogTests.h  CatalogTestsImpl.stubs  CharacterTests.cpp  CharacterTests.h  CloudScriptTests.cpp  CloudScriptTests.h  CloudScriptTestsImpl.stubs  DataTests.cpp  DataTests.h  DataTestsImpl.stubs  ExperimentationTests.cpp  ExperimentationTests.h  ExperimentationTestsImpl.stubs  FriendsTests.cpp  FriendsTests.h  FriendsTestsImpl.stubs  GetGeneratedTestsFiles.cmake  GroupsTests.cpp  GroupsTests.h  GroupsTestsImpl.stubs  InventoryTests.cpp  InventoryTests.h  InventoryTestsImpl.stubs  LeaderboardsTests.cpp  LeaderboardsTests.h  LeaderboardsTestsImpl.stubs  LocalizationTests.cpp  LocalizationTests.h  LocalizationTestsImpl.stubs  MultiplayerServerTests.cpp  MultiplayerServerTests.h  MultiplayerServerTestsImpl.stubs  PlatformSpecificTests.cpp  PlatformSpecificTests.h  PlatformSpecificTestsImpl.stubs  PlayFabServices.GeneratedTests.vcxitems  (+19 more)
Test/PlayFabServicesManualTestApp/: MicrosoftGame.Config  PlayFabServicesManualTestApp.Gdk.vcxproj  PlayFabServicesManualTestApp.Gdk.vcxproj.filters  PlayFabServicesManualTestAppViaGDKBinary.Gdk.sln  PlayFabServicesManualTestAppViaGDKBinary.Gdk.vcxproj  PlayFabServicesManualTestAppViaGDKBinary.Gdk.vcxproj.filters  TestAppPch.h
Test/PlayFabServicesManualTestApp/Linux/: .gitignore  BuildTest.bash  CMakeLists.txt  main.cpp
Test/PlayFabServicesTestApp/: GetPlayFabServicesTestAppCommon.cmake  PlayFabServicesTestApp.Common.vcxitems  PlayFabServicesTestApp.Common.vcxitems.filters  TestAppPch.h
Test/PlayFabServicesTestApp/Android/app/: CMakeLists.txt  build.gradle
Test/PlayFabServicesTestApp/Android/app/src/androidTest/java/com/microsoft/playfab/sdk/: AndroidAutomatedTest.java
Test/PlayFabServicesTestApp/Android/app/src/main/: AndroidManifest.xml
Test/PlayFabServicesTestApp/Android/app/src/main/java/com/microsoft/playfab/sdk/: AndroidTestClient.java
Test/PlayFabServicesTestApp/Android/app/src/main/res/layout/: activity_main.xml
Test/PlayFabServicesTestApp/Android/app/src/main/res/values/: strings.xml
Test/PlayFabServicesTestApp/Linux/: CMakeLists.txt  PlayFabTestApp_Linux.bash
specs/playfab-gamesave/: ai-bootstrap.md  ai-summary.md  (+1 more)
(+653 files in other folders)
